--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,9 @@ img {
     display: flex;
     width: 100%;
     height: 100%;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
     background-color: #2A2D32;
     position: fixed;
     justify-content: center;
@@ -127,6 +130,12 @@ img {
     z-index: 99999;
     top: 0%;
     right: 0%;
+}
+
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
 }
 
 .mobile-menu-container {
