--- a/styles.css
+++ b/styles.css
@@ -115,9 +115,6 @@ img {
     display: flex;
     width: 100%;
     height: 100%;
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
     background-color: #2A2D32;
     position: fixed;
     justify-content: center;
@@ -125,8 +122,8 @@ img {
     z-index: 99999;
     top: 0%;
     right: 0%;
-    transform: translate(100%);
-    transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1), visibility 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateX(100%);
+    transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-open {
@@ -135,9 +132,20 @@ img {
     pointer-events: auto;
 }
 
+.is-closed {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
 .mobile-menu.is-open {
-    transform: translate(0%);
-    transition: transform opacity 300ms, visbility 300ms
+    transform: translateX(0%);
+    transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu.is-closed {
+    transform: translateX(100%);
+    transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mobile-menu-container {
